Revert "Remove redundant anti forgery tokens"
This reverts commit 07f38969e8d76df517599d6483496bef7536ab18.

--- a/ODK.Web.Razor/Pages/Account/Create.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Create.cshtml
@@ -18,6 +18,7 @@
     ContentFunc = 
         @<div>
             <form method="post" action="/account/create" enctype="multipart/form-data">
+                @Html.AntiForgeryToken()
                 @await Html.PartialAsync("Account/_AccountCreateForm", new AccountCreateFormViewModel
                 {
                     GoogleClientId = viewModel.GoogleClientId,
