--- a/ODK.Web.Razor/Views/Shared/Account/_ForgottenPasswordForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ForgottenPasswordForm.cshtml
@@ -5,6 +5,8 @@
 </p>
 
 <form method="post" action="@(Model.Chapter != null ? $"/{Model.Chapter.Name}" : "")/Account/Password/Forgotten">
+    @Html.AntiForgeryToken()
+    
     <div class="form-group mb-3 required">
         @Html.LabelFor(x => x.EmailAddress, new { @class = "form-label" })
         @Html.TextBoxFor(x => x.EmailAddress, new { @class = "form-control" })
