--- a/ODK.Web.Razor/Views/Shared/Account/_NotificationsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_NotificationsContent.cshtml
@@ -27,6 +27,7 @@
 
 <p>Show notifications for:</p>
 <form method="post" action="/account/notifications">
+    @Html.AntiForgeryToken()
     @await Html.PartialAsync("Account/_NotificationSettingsForm", new NotificationSettingsFormViewModel
     {
         Settings = settingsViewModels
