--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberContent.cshtml
@@ -12,6 +12,7 @@
 @await Html.PartialAsync("Admin/Members/_MemberAdminTabs", Model)
 
 <form method="post">
+    @Html.AntiForgeryToken()
     @await Html.PartialAsync("Admin/Members/_MemberForm", new MemberFormViewModel
     {
         SubscriptionExpiryDate = Model.Subscription?.ExpiresUtc,
