--- a/ODK.Web.Razor/Views/Shared/Contact/_ChapterContactContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Contact/_ChapterContactContent.cshtml
@@ -9,6 +9,7 @@
 @if (!Model.Sent)
 {
     <form method="post">
+        @Html.AntiForgeryToken()
         @await Html.PartialAsync("Contact/_ContactForm", new ContactFormViewModel())
         <button class="btn btn-primary">Send</button>
     </form>
