--- a/ODK.Web.Razor/Views/Shared/Groups/_GroupJoinContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_GroupJoinContent.cshtml
@@ -33,6 +33,7 @@
 
 <section class="section">
     <form method="post">
+        @Html.AntiForgeryToken()
         @await Html.PartialAsync("Account/_ChapterProfileForm", new ChapterProfileFormViewModel
         {
             ChapterName = "",
