--- a/ODK.Web.Razor/Views/Shared/Header/_HomeHeader.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_HomeHeader.cshtml
@@ -41,7 +41,7 @@
        Color = "dark",
        Compact = false,
        CssClass = "navbar--home d-md-none",
-       HideAccountMenu = false,
+       HideAccountMenu = true,
        Member = member,
        MenuItems = menuItems.Segment(5).ToArray()
    }
