--- a/ODK.Web.Razor/Pages/Account/Location.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Location.cshtml
@@ -35,6 +35,7 @@
 
                 <section class="section">
                     <form action="/account/location" method="post">
+                        @Html.AntiForgeryToken()
                         @await Html.PartialAsync("Account/_LocationForm", new LocationFormViewModel
                         {
                             DistanceUnit = memberPreferences?.DistanceUnit?.Id,
