--- a/ODK.Web.Razor/Views/Shared/Account/_ChapterJoinContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ChapterJoinContent.cshtml
@@ -15,6 +15,8 @@
 }
 
 <form method="post" action="/@Model.Chapter.Name/Account/Join" enctype="multipart/form-data">
+    @Html.AntiForgeryToken()
+    
     @if (memberId == null)
     {
         @await Html.PartialAsync("Account/_PersonalDetailsForm", new PersonalDetailsFormViewModel
