--- a/ODK.Web.Razor/Views/Shared/Account/_LoginForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_LoginForm.cshtml
@@ -1,6 +1,8 @@
 ﻿@model ODK.Web.Razor.Models.Login.LoginViewModel
 
 <form method="post" action="@(Model.Chapter != null ? $"/{Model.Chapter.Name}" : "")/Account/Login?ReturnUrl=@Model.ReturnUrl">
+    @Html.AntiForgeryToken()
+
     <div class="form-group required mb-3">
         @Html.LabelFor(x => x.Email, new { @class = "form-label" })
         @Html.TextBoxFor(x => x.Email, new { @class = "form-control" })
