--- a/ODK.Web.Razor/Views/Shared/Account/_UpdatePictureContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_UpdatePictureContent.cshtml
@@ -36,6 +36,8 @@
     Body =
     @<div>
         <form method="post" action="/account/picture/change">
+            @Html.AntiForgeryToken()
+            
             @await Html.PartialAsync("Account/_PictureUpload", new PictureUploadViewModel())
 
             <div class="d-flex justify-content-end mt-3">
