--- a/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventInvitesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventInvitesContent.cshtml
@@ -36,12 +36,14 @@
     <div>
         <div class="d-flex gap-3">
             <form method="post" action="/groups/@Model.Chapter.Id/events/@Model.Event.Id/invites/send">
+                @Html.AntiForgeryToken()
                 <button type="submit" class="btn btn-success"
                         onclick="return confirm('Are you sure you want to send invite emails for this event?');">
                     Send invites
                 </button>
             </form>
             <form method="post" action="/groups/@Model.Chapter.Id/events/@Model.Event.Id/invites/send/test">
+                @Html.AntiForgeryToken()
                 <button type="submit" class="btn btn-secondary">Send test</button>
             </form>
         </div>        
