--- a/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_ScheduledEmailForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_ScheduledEmailForm.cshtml
@@ -4,6 +4,8 @@
 @model ODK.Web.Razor.Models.Admin.Events.EventScheduledEmailFormViewModel
 
 <form method="post" action="/groups/@Model.Chapter.Id/events/@Model.EventId/invites/scheduled">
+    @Html.AntiForgeryToken()
+
     <div class="form-group mb-3">        
         <div class="row">
             <div class="col-6">
