--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_AdminMemberContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_AdminMemberContent.cshtml
@@ -18,6 +18,7 @@
     ContentFunc = 
         @<div>
             <form method="post">
+                @Html.AntiForgeryToken()
                 @await Html.PartialAsync("Admin/Members/_AdminMemberForm", new AdminMemberFormViewModel
                 {
                     AdminEmailAddress = Model.AdminMember.AdminEmailAddress,
