--- a/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueCreateContent.cshtml
@@ -28,6 +28,8 @@
 
 <section class="section">
     <form method="post">
+        @Html.AntiForgeryToken()
+
         @await Html.PartialAsync("Admin/Venues/_VenueForm", new VenueFormViewModel())
 
         <button type="submit" class="btn btn-primary">Create</button>
