--- a/ODK.Web.Razor/Views/Shared/Pricing/_SubscriptionPrice.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Pricing/_SubscriptionPrice.cshtml
@@ -31,6 +31,7 @@
                 @Model.Currency.ToAmountString(Model.Amount)/@periodUnit
             </p>
             <form action="/account/subscription/confirm" method="post">
+                @Html.AntiForgeryToken()
                 @await Html.PartialAsync("Payments/_PaymentSubscriptionForm", new PaymentSubscriptionFormViewModel
                 {
                     CurrencyCode = Model.Currency.Code,
