--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailContent.cshtml
@@ -2,6 +2,8 @@
 @model ODK.Web.Razor.Models.SuperAdmin.EmailContentViewModel
 
 <form method="post">
+    @Html.AntiForgeryToken()
+    
     <div class="form-check mb-3">
         @Html.CheckBox("overridable", Model.Email.Overridable, new { @class = "form-check-input" })
         <label class="form-check-label" for="overridable">
