--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailProviderContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailProviderContent.cshtml
@@ -2,6 +2,7 @@
 @model ODK.Core.Emails.EmailProvider
 
 <form method="post">
+    @Html.AntiForgeryToken()
     @await Html.PartialAsync("SuperAdmin/_EmailProviderForm", new EmailProviderFormViewModel
     {
         BatchSize = Model.BatchSize,
