--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailProviderCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailProviderCreateContent.cshtml
@@ -1,6 +1,7 @@
 ﻿@using ODK.Web.Razor.Models.SuperAdmin
 
 <form method="post">
+    @Html.AntiForgeryToken()
     @await Html.PartialAsync("SuperAdmin/_EmailProviderForm", new EmailProviderFormViewModel())
     <button class="btn btn-primary">Create</button>
 </form>
