--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_ErrorsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_ErrorsContent.cshtml
@@ -31,6 +31,7 @@
                         </td>
                         <td>
                             <form method="post" action="/SuperAdmin/Errors/@error.Id/Delete">
+                                @Html.AntiForgeryToken()
                                 <button data-bs-toggle="tooltip" data-bs-title="Delete" class="btn-icon text-danger">
                                     <i class="fas fa-times"></i>
                                 </button>
