--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_MessageContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_MessageContent.cshtml
@@ -84,6 +84,7 @@
             <button type="button" class="btn btn-link p-0" data-bs-toggle="collapse" data-bs-target="#mark-replied">Already replied?</button>
             <div class="collapse" id="mark-replied">
                 <form action="/superadmin/messages/@Model.Message.Id/replied" method="post">
+                    @Html.AntiForgeryToken()
                     <button class="btn btn-primary">Set message as replied</button>
                 </form>
             </div>            
@@ -91,6 +92,7 @@
     }    
 
     <form action="/superadmin/messages/@Model.Message.Id/reply" method="post">
+        @Html.AntiForgeryToken()
         @await Html.PartialAsync("SuperAdmin/_MessageForm", new MessageReplyFormViewModel
         {
             Message = ""
