--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_SubscriptionCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_SubscriptionCreateContent.cshtml
@@ -19,6 +19,7 @@
     }
 
     <form action="/superadmin/subscriptions" method="post">
+        @Html.AntiForgeryToken()
         @await Html.PartialAsync("SuperAdmin/_SubscriptionForm", new SiteSubscriptionFormViewModel())
         <button class="btn btn-primary">Create</button>
     </form>
