--- a/ODK.Web.Razor/Views/Shared/Account/_ActivateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ActivateContent.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ODK.Web.Razor.Models.Account.ActivateFormViewModel
 
 <form method="post">
-    @Html.AntiForgeryToken()
+    @*@Html.AntiForgeryToken()*@
     <div class="form-group mb-3 required">
         @Html.LabelFor(x => x.Password, new { @class = "form-label" })
         @Html.PasswordFor(x => x.Password, new { @class = "form-control" })
