--- a/ODK.Web.Razor/Views/Shared/Account/_ChapterJoinContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ChapterJoinContent.cshtml
@@ -15,7 +15,7 @@
 }
 
 <form method="post" action="/@Model.Chapter.Name/Account/Join" enctype="multipart/form-data">
-    @Html.AntiForgeryToken()
+    @*@Html.AntiForgeryToken()*@
     
     @if (memberId == null)
     {
