--- a/ODK.Web.Razor/Views/Shared/Account/_ResetPasswordForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ResetPasswordForm.cshtml
@@ -1,7 +1,7 @@
 ﻿@model ODK.Web.Razor.Models.Account.ResetPasswordFormViewModel
 
 <form method="post">
-    @Html.AntiForgeryToken()
+    @*@Html.AntiForgeryToken()*@
     
     @Html.HiddenFor(x => x.Token)
     <div class="form-group mb-3 required">
