--- a/ODK.Web.Razor/Views/Shared/Account/_UpdatePictureContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_UpdatePictureContent.cshtml
@@ -36,7 +36,7 @@
     Body =
     @<div>
         <form method="post" action="/account/picture/change">
-            @Html.AntiForgeryToken()
+            @*@Html.AntiForgeryToken()*@
             
             @await Html.PartialAsync("Account/_PictureUpload", new PictureUploadViewModel())
 
