--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_BulkEmailContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_BulkEmailContent.cshtml
@@ -15,7 +15,7 @@
     Feature = SiteFeatureType.SendMemberEmails,
     ContentFunc = 
         @<form method="post" action="/groups/@Model.Chapter.Id/members/email" data-live-url-container>
-            @Html.AntiForgeryToken()
+            @*@Html.AntiForgeryToken()*@
 
             <p>
                 <div class="row row-cols-lg-auto g-3 align-items-center">
