--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberDeleteContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_MemberDeleteContent.cshtml
@@ -8,7 +8,7 @@
 @await Html.PartialAsync("Admin/Members/_MemberAdminTabs", Model)
 
 <form method="post" action="/groups/@Model.Chapter.Id/members/@Model.Member.Id/delete">
-    @Html.AntiForgeryToken()
+    @*@Html.AntiForgeryToken()*@
     
     @if (Model.MemberSubscription?.Type.IsPaid() == true && Model.MemberSubscription?.IsExpired() == false)
     {
