--- a/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueContent.cshtml
@@ -28,7 +28,7 @@
 })
 
 <form method="post">
-    @Html.AntiForgeryToken()
+    @*@Html.AntiForgeryToken()*@
     @await Html.PartialAsync("Admin/Venues/_VenueForm", new VenueFormViewModel
     {
         Address = Model.Venue.Address,
