--- a/ODK.Web.Razor/Views/Shared/Events/_EventResponseIcon.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Events/_EventResponseIcon.cshtml
@@ -5,7 +5,7 @@
 {
     if (!Model.ReadOnly)
     {
-        @Html.AntiForgeryToken()
+        @*@Html.AntiForgeryToken()*@
         @Html.HiddenFor(x => x.ResponseType)
     }
 
