--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailsContent.cshtml
@@ -10,7 +10,7 @@
 <section class="section--admin">
     <h2>Settings</h2>
     <form action="/superadmin/emails/settings" method="post">
-        @Html.AntiForgeryToken()
+        @*@Html.AntiForgeryToken()*@
         @await Html.PartialAsync("SuperAdmin/_EmailSettingsForm", new SiteEmailSettingsViewModel
         {
             ContactEmailAddress = settings.ContactEmailAddress,
