--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_InstagramContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_InstagramContent.cshtml
@@ -10,7 +10,7 @@
 <h2 class="d-none d-md-block">Instagram</h2>
 
 <form method="post" class="mb-3">
-    @Html.AntiForgeryToken()
+    @*@Html.AntiForgeryToken()*@
     @await Html.PartialAsync("SuperAdmin/_InstagramForm", new InstagramFormViewModel
     {
         ScraperUserAgent = settings.InstagramScraperUserAgent
@@ -19,7 +19,7 @@
 </form>
 
 <form method="post" action="/@Model.Name/Admin/SuperAdmin/Instagram/Scrape">
-    @Html.AntiForgeryToken()
+    @*@Html.AntiForgeryToken()*@
     <button class="btn btn-secondary">Scrape</button>
 </form>
 <p class="text-muted">
