--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_SubscriptionsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_SubscriptionsContent.cshtml
@@ -67,7 +67,7 @@
                             else
                             {
                                 <form action="/superadmin/subscriptions/@subscription.Id/default" method="post">
-                                    @Html.AntiForgeryToken()
+                                    @*@Html.AntiForgeryToken()*@
                                     <button class="btn btn-primary btn-sm">Set default</button>
                                 </form>
                             }
