--- a/ODK.Web.Razor/Views/Shared/Account/_EmailPreferencesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_EmailPreferencesContent.cshtml
@@ -26,7 +26,7 @@
 <p>Choose whether or not you want to receive the following:</p>
 
 <form action="/account/emails" method="post">
-    @Html.AntiForgeryToken()
+    @*@Html.AntiForgeryToken()*@
     @await Html.PartialAsync("Account/_EmailPreferencesForm", new EmailPreferencesFormViewModel
     {
         Preferences = preferenceViewModels
