--- a/ODK.Web.Razor/Views/Shared/Account/_ForgottenPasswordForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ForgottenPasswordForm.cshtml
@@ -5,7 +5,7 @@
 </p>
 
 <form method="post" action="@(Model.Chapter != null ? $"/{Model.Chapter.Name}" : "")/Account/Password/Forgotten">
-    @Html.AntiForgeryToken()
+    @*@Html.AntiForgeryToken()*@
     
     <div class="form-group mb-3 required">
         @Html.LabelFor(x => x.EmailAddress, new { @class = "form-label" })
