--- a/ODK.Web.Razor/Views/Shared/Account/_InterestsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_InterestsContent.cshtml
@@ -3,7 +3,7 @@
 @model MemberInterestsPageViewModel
 
 <form action="/account/topics" method="post">
-    @Html.AntiForgeryToken()
+    @*@Html.AntiForgeryToken()*@
     <div class="form-group mb-3">
         <p>
             We use your interests to help you find groups relevant to you
