--- a/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventResponsesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/Event/_EventResponsesContent.cshtml
@@ -107,7 +107,7 @@
                                         var active = response == responseType;
 
                                         <form method="post" action="/groups/@Model.Chapter.Id/events/@Model.Event.Id/attendees/@member.Id">
-                                            @Html.AntiForgeryToken()
+                                            @*@Html.AntiForgeryToken()*@
                                             @await Html.PartialAsync("Events/_EventResponseIcon", new EventResponseIconViewModel
                                             {
                                                 Active = active,
