--- a/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Events/_EventCreateContent.cshtml
@@ -34,7 +34,7 @@
     ContentFunc = 
         @<div>
             <form method="post">
-                @Html.AntiForgeryToken()
+                @*@Html.AntiForgeryToken()*@
     
                 @await Html.PartialAsync("Admin/Events/Event/_EventForm", new EventFormViewModel
                 {
