--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_MembershipSettingsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_MembershipSettingsContent.cshtml
@@ -16,7 +16,7 @@
         Feature = SiteFeatureType.MemberSubscriptions,
         ContentFunc = 
             @<form action="/groups/@Model.Chapter.Id/membership" method="post">
-                @Html.AntiForgeryToken()
+                @*@Html.AntiForgeryToken()*@
                 @await Html.PartialAsync("Admin/Members/_MembershipSettingsForm", new MembershipSettingsFormViewModel
                 {
                     ApproveNewMembers = membershipSettings?.ApproveNewMembers ?? false,
