--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionCreateContent.cshtml
@@ -38,7 +38,7 @@
                 }
 
                 <form method="post">
-                    @Html.AntiForgeryToken()
+                    @*@Html.AntiForgeryToken()*@
                     @await Html.PartialAsync("Admin/Members/_SubscriptionForm", new SubscriptionFormViewModel
                     {
                         OwnerSubscription = Model.OwnerSubscription,
