--- a/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueCreateContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Venues/_VenueCreateContent.cshtml
@@ -28,7 +28,7 @@
 
 <section class="section">
     <form method="post">
-        @Html.AntiForgeryToken()
+        @*@Html.AntiForgeryToken()*@
 
         @await Html.PartialAsync("Admin/Venues/_VenueForm", new VenueFormViewModel())
 
