--- a/ODK.Web.Razor/Views/Shared/Groups/Profile/_GroupProfileSubscriptionContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/Profile/_GroupProfileSubscriptionContent.cshtml
@@ -33,7 +33,7 @@
                 else
                 {
                     <form action="/groups/@Model.Chapter.Id/leave" method="post">
-                        @Html.AntiForgeryToken()
+                        @*@Html.AntiForgeryToken()*@
                         <p>If you leave the group we will delete your data associated with this group, including any subscriptions you currently have.</p>
                         <div class="form-group mb-3">
                             <label for="reason" class="form-label">Reason you want to leave this group</label>
