--- a/ODK.Web.Razor/Views/Shared/Groups/_GroupConversationContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_GroupConversationContent.cshtml
@@ -54,7 +54,7 @@
                 BodyContentFunc = 
                     @<div>
                         <form action="/groups/@Model.Chapter.Id/conversations/@Model.Conversation.Id/reply" method="post">
-                            @Html.AntiForgeryToken()
+                            @*@Html.AntiForgeryToken()*@
                             @await Html.PartialAsync("Groups/_GroupConversationReplyForm", new ChapterConversationReplyFormViewModel())
                             <button class="btn btn-primary">Send</button>
                         </form>
