--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_EmailContent.cshtml
@@ -2,7 +2,7 @@
 @model ODK.Web.Razor.Models.SuperAdmin.EmailContentViewModel
 
 <form method="post">
-    @Html.AntiForgeryToken()
+    @*@Html.AntiForgeryToken()*@
     
     <div class="form-check mb-3">
         @Html.CheckBox("overridable", Model.Email.Overridable, new { @class = "form-check-input" })
