--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_FeatureContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_FeatureContent.cshtml
@@ -8,7 +8,7 @@
 }
 
 <form method="post">
-    @Html.AntiForgeryToken()
+    @*@Html.AntiForgeryToken()*@
     @await Html.PartialAsync("SuperAdmin/_FeatureForm", new FeatureFormViewModel
     {
         Description = Model.Feature.Description,
