--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_FeaturesContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_FeaturesContent.cshtml
@@ -37,7 +37,7 @@
                     <td>@feature.CreatedUtc.ToString("yyyy-MM-dd")</td>
                     <td>
                         <form action="/superadmin/features/@feature.Id/delete" method="post">
-                            @Html.AntiForgeryToken()
+                            @*@Html.AntiForgeryToken()*@
                             <button class="btn-icon text-danger" onclick="return confirm('Are you sure you want to delete this feature?');">
                                     <i class="fas fa-times"></i>
                             </button>
