--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_PaymentsContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_PaymentsContent.cshtml
@@ -11,7 +11,7 @@
 
 <section class="section">
     <form method="post">
-        @Html.AntiForgeryToken()
+        @*@Html.AntiForgeryToken()*@
         @await Html.PartialAsync("SuperAdmin/_PaymentSettingsForm", new PaymentSettingsFormViewModel
         {        
             Provider = Model.Provider,
