--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_SubscriptionContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_SubscriptionContent.cshtml
@@ -9,7 +9,7 @@
 <section class="section--admin">
     <h2>@Model.Subscription.Name</h2>
     <form action="/SuperAdmin/Subscriptions/@Model.Subscription.Id" method="post">
-        @Html.AntiForgeryToken()
+        @*@Html.AntiForgeryToken()*@
         @await Html.PartialAsync("SuperAdmin/_SubscriptionForm", new SiteSubscriptionFormViewModel
         {
             Description = Model.Subscription.Description,
@@ -52,7 +52,7 @@
                         <td>@price.ExternalId</td>
                         <td>
                             <form action="/SuperAdmin/Subscriptions/@Model.Subscription.Id/Prices/@price.Id/Delete" method="post">
-                                @Html.AntiForgeryToken()
+                                @*@Html.AntiForgeryToken()*@
                                 <button data-bs-toggle="tooltip" data-bs-title="Delete" class="btn-icon text-danger"
                                         onclick="return confirm('Are you sure you want to delete this price?');">
                                     <i class="fas fa-times"></i>
@@ -66,7 +66,7 @@
     </div>
     <div class="mt-3">
         <form action="/SuperAdmin/Subscriptions/@Model.Subscription.Id/Prices" method="post">
-            @Html.AntiForgeryToken()
+            @*@Html.AntiForgeryToken()*@
 
             <div class="form-inline">                
                 @await Html.PartialAsync("SuperAdmin/_SubscriptionPriceForm", new SiteSubscriptionPriceFormViewModel
