--- a/ODK.Web.Razor/Views/Shared/Groups/_GroupSearchForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_GroupSearchForm.cshtml
@@ -7,7 +7,7 @@
         <span class="input-group-text">
             <i class="fa-solid fa-location-dot" data-bs-toggle="tooltip" data-bs-title="Location"></i>
         </span>
-        <input type="text" name="n" value="@Model.Location?.Name" class="form-control" data-location />
+        <input type="text" name="n" value="@Model.Location?.Name" class="form-control" placeholder="Location" data-location />
     </div>
 
     <input type="hidden" value="@Model.Location?.LatLong.Lat" data-location-lat />
