--- a/ODK.Web.Razor/Views/Shared/Payments/_PaymentSubscriptionModal.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Payments/_PaymentSubscriptionModal.cshtml
@@ -18,6 +18,11 @@
                 @await Html.PartialAsync("Payments/_PaymentSubscriptionForm", Model.PaymentForm)
             </form>
         }
+        else if (Model.PaymentSettings?.Provider == PaymentProviderType.Stripe)
+        {
+            <div data-stripe-checkout="@Model.StripeSessionId">
+            </div>
+        }
         else
         {
             <div class="alert alert-danger">
