--- a/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionEditContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Admin/Members/_SubscriptionEditContent.cshtml
@@ -35,6 +35,8 @@
         Amount = Model.Subscription.Amount,
         Description = Model.Subscription.Description,
         DurationMonths = Model.Subscription.Months,
+        Enabled = !Model.Subscription.Disabled,
+        Id = Model.Subscription.Id,
         Name = Model.Subscription.Name,
         OwnerSubscription = Model.OwnerSubscription,
         PaymentSettings = Model.PaymentSettings,
